[gd_scene load_steps=12 format=3 uid="uid://3ekxyrpwp712"]

[ext_resource type="Script" path="res://Scripts/Enemigos/Rabion.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://0ettfhn1kxgs" path="res://Sprites/Enemigos/Rabion.PNG" id="2"]
[ext_resource type="PackedScene" uid="uid://fyyh6totk12a" path="res://Componentes/Salud.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://6wpanuw2c5wd" path="res://Componentes/ElementalState.tscn" id="5_ee7kg"]
[ext_resource type="PackedScene" uid="uid://c0wjgvhp87sex" path="res://Componentes/GenerAyudas.tscn" id="6_e8toi"]

[sub_resource type="CircleShape2D" id="6"]
radius = 8.0

[sub_resource type="Animation" id="2"]
resource_name = "Movin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="3"]
resource_name = "Stay"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8y8g"]
_data = {
"Movin": SubResource("2"),
"Stay": SubResource("3")
}

[sub_resource type="CircleShape2D" id="4"]
radius = 136.0

[sub_resource type="CircleShape2D" id="7"]
radius = 9.0

[node name="Rabion" type="CharacterBody2D" groups=["Conejos", "Enemy"]]
collision_layer = 2
collision_mask = 31
motion_mode = 1
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-3, -11)
texture = ExtResource("2")
hframes = 3
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8y8g")
}

[node name="VisionField" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionField"]
visible = false
shape = SubResource("4")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("7")

[node name="Salud" parent="." instance=ExtResource("3")]
max_amount = 5

[node name="Knockback_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ElementalState" parent="." instance=ExtResource("5_ee7kg")]

[node name="GenerAyudas" parent="." instance=ExtResource("6_e8toi")]

[connection signal="body_entered" from="VisionField" to="." method="_on_VisionField_body_entered"]
[connection signal="body_exited" from="VisionField" to="." method="_on_VisionField_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="temporal_damage" from="ElementalState" to="." method="_on_elemental_state_temporal_damage"]
